--- a/index.html
+++ b/index.html
@@ -29,10 +29,37 @@
                     <div class="magnifier"><i class="fa-solid fa-magnifying-glass"></i></div></div>
             </div>
             <div class="courses">
-                <div class="course-box"></div>
-                <div class="course-box"></div>
-                <div class="course-box"></div>
-                <div class="course-box"></div>
+                <div class="course-box">
+                    <div class="thumbnail"><img src="./media/thumbnail.png" alt="thumbnail"></div>
+                    <div class="course-detail">
+                        <div class="course-title">
+                            <h3>WEB PROGRAMING BOOTCAMP</h3>
+                            <h4>Ihtesham Hussain</h4>
+                        </div>
+                        <div class="course-overview"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, dicta?</p></div>
+                    </div>
+                    <button>goto course</button>
+                </div>
+                <div class="course-box">
+                    <div class="thumbnail"><img src="./media/thumbnail.png" alt="thumbnail"></div>
+                    <div class="course-detail"></div>
+                    <button>goto course</button>
+                </div>
+                <div class="course-box">
+                    <div class="thumbnail"><img src="./media/thumbnail.png" alt="thumbnail"></div>
+                    <div class="course-detail"></div>
+                    <button>goto course</button>
+                </div>
+                <div class="course-box">
+                    <div class="thumbnail"><img src="./media/thumbnail.png" alt="thumbnail"></div>
+                    <div class="course-detail"></div>
+                    <button>goto course</button>
+                </div>
+                <div class="course-box">
+                    <div class="thumbnail"><img src="./media/thumbnail.png" alt="thumbnail"></div>
+                    <div class="course-detail"></div>
+                    <button>goto course</button>
+                </div>
 
 
             </div>
